Finalized project. Fixed links.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1817,6 +1817,7 @@ input, select, textarea {
 	}
 
 	input[type="text"],
+	input[type="tel"],
 	input[type="password"],
 	input[type="email"],
 	select,
